Update README.md
Added necessary VM options